<resources>
    <string name="app_name">Expense Manager</string>
    <string name="tab_expense">Expense</string>
    <string name="tab_income">Income</string>
    <string name="income_fragment">Income Fragment</string>
    <string name="expense_fragment">Expense Fragment</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="amount">Amount:</string>
    <string name="description">Description:</string>
    <string name="save">Save</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="import_transactions">Import Transactions</string>
    <string name="export_transactions">Export Transactions</string>
    <string name="enter_url_here">Enter URL here</string>
    <string name="refresh_list">Refresh List</string>
</resources>
