<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".ExpenseFragment">

    <LinearLayout
        android:id="@+id/date_layout_income"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/date"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/date_text_view_income"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:text="10-10-2020"
            android:textSize="18sp" />

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:onClick="openDatePickerDialog"
            android:src="@drawable/ic_edit_black_24dp"
            tools:ignore="OnClick" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/time_layout_income"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/date_layout_income">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/time"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/time_text_view_income"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:text="2:30 pm"
            android:textSize="18sp" />

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:onClick="openTimePickerDialog"
            android:src="@drawable/ic_edit_black_24dp"
            tools:ignore="OnClick" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/amount_layout_income"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/time_layout_income">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/amount"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/amount_edit_text_income"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/description_layout_income"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/amount_layout_income">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/description"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/description_edit_text_income"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="text" />
    </LinearLayout>

    <Button
        android:id="@+id/save_button_income"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:onClick="saveIncomeTransactionButton"
        android:text="SAVE INCOME"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="OnClick" />

</androidx.constraintlayout.widget.ConstraintLayout>