<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".ExpenseFragment">

    <LinearLayout
        android:id="@+id/transaction_type_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/type_text_view_transaction_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:gravity="start"
            android:text="Expense"
            android:textColor="@android:color/holo_red_light"
            android:textSize="24sp" />

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:onClick="openDatePickerDialog"
            android:src="@drawable/ic_edit_black_24dp"
            tools:ignore="OnClick" />

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:onClick="openDatePickerDialog"
            android:src="@drawable/ic_edit_black_24dp"
            tools:ignore="OnClick" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/date_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/transaction_type_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/date"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/date_text_view_transaction_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:gravity="end"
            android:text="10-02-2020"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/time_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/date_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/time"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/time_text_view_transaction_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:gravity="end"
            android:text="2:30 pm"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/amount_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/time_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/amount"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/amount_text_view_transaction_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:gravity="end"
            android:text="1,200"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/description_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/amount_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/description"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/description_text_view_transaction_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:gravity="end"
            android:text="2:30 pm"
            android:textSize="18sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>